--- a/styles.css
+++ b/styles.css
@@ -361,7 +361,7 @@ html {
     align-items: flex-start;
     margin-bottom: 18px;
     width: 100%;
-    margin-top: 28px;   /* <-- Add this line for the gap! */
+    margin-top: 60px;
   }
 }
 
