--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,13 @@ html {
 /* Proportional font reduction mobile/tablet */
 @media (max-width: 500px) {
   .brand, #desktop-brand, #mobile-brand {
-    font-size: 4rem;
+    font-size: 2rem;
   }
   .role, #desktop-role, #mobile-role {
     font-size: 0.92rem;
+  }
+    body {
+    font-size: 0.7rem; /* or your preferred size */
   }
 }
 .sidebar-bio {
